refactor(i18n): 提取硬编码字符串为资源束消息
- 在 MikGroupAction 中添加 ActionUpdateThread.BGT 支持以避免阻塞 EDT
- UploadNotification 类全面使用 MikBundle 消息替代硬编码字符串
- ProjectSettingsPage 移除调试日志并使用国际化消息